--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 20px;
   height: 200px;
-  margin-top: 10px;
+  margin-bottom: 40px;
 }
 .item3 {
   grid-column: 3/4;
@@ -82,7 +82,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 20px;
   height: 200px;
-  margin-top: 10px;
+  margin-bottom: 40px;
 
 }
 
@@ -97,7 +97,7 @@ body {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.5px;
   color: white;
   font-weight: 600;
   line-height: 25px;
